# derailed-credentials

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  conftest.py  credentials.py  pyproject.toml  pytest.ini  test_credentials.py  test_performance.py  test_security.py  tox.ini
.github/workflows/: test.yml
credentials/: __main__.py  cli.py  core.py
derailed/: __init__.py  __main__.py  cli.py  core.py  diffing.py  serialization.py
tests/: base.py  conftest.py  test_cli.py  test_core.py  test_integration.py  test_serialization.py
