[project]
name = "python-credentials"
version = "0.1.0"
description = "Python equivalent of Rails credentials system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.7",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.3.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.0",
    "pytest-xdist>=3.8.0",
    "pytest-benchmark>=5.1.0",
    "coverage>=7.10.6",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "flake8>=7.3.0",
    "types-pyyaml>=6.0.12.20250822",
    "ipdb>=0.13.13",
    "pytest-watch>=4.2.0",
    "pytest-notifier>=1.0.4",
    "pytest-subprocess>=1.5.3",
]

[tool.mypy]
files = [
    "credentials/"
]
