[project]
name = "derailed-credentials"
version = "0.1.0"
description = "Python equivalent of Rails credentials system"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.txt" }
authors = [{ name = "Paolo D'Apice", email = "dapicester@gmail.com" }]
keywords = ["credentials", "encryption", "cli"]
dependencies = [
    "cryptography",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/dapicester/derailed-credentials/"
Repository = "https://github.com/dapicester/derailed-credentials/"

[project.scripts]
derailed = "derailed:main"

[dependency-groups]
dev = [
    "pytest-cov>=6.3.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.0",
    "pytest-xdist>=3.8.0",
    "pytest-benchmark>=5.1.0",
    "coverage>=7.10.6",
    "mypy>=1.17.1",
    "types-pyyaml>=6.0.12.20250822",
    "ipdb>=0.13.13",
    "pytest-watch>=4.2.0",
    "pytest-notifier>=1.0.4",
    "pytest-subprocess>=1.5.3",
    "ruff>=0.12.12",
    "pre-commit>=4.3.0",
]

[tool.mypy]
files = [
    "derailed/"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["derailed"]
